--- a/css/leaflet-handy-controls.css
+++ b/css/leaflet-handy-controls.css
@@ -16,6 +16,7 @@
   cursor: pointer;
   border-radius: 4px;
   padding: 4px;
+  box-sizing: border-box;
   float: left;
 }
 .handy-toggle-button.toggled-on {
